--- a/public/erregistroa.html
+++ b/public/erregistroa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erregistroa</title>
     <link rel="shortcut icon" href="img/karate.png" />
-    <link rel="stylesheet" href="registro.css">
+    <link rel="stylesheet" href="erregistroa.css">
 </head>
 <body>
     <!-- Header -->
