Aldaketak Erregistros.css y html

--- a/public/erregistroa.html
+++ b/public/erregistroa.html
@@ -9,42 +9,34 @@
 </head>
 <body>
     <!-- Header -->
-<header>
-    <div class="kontainerra">
-        <nav class="headerren-nav">
-            <div class="logo-content">
-                <a href="index.html"><img src="img/karate.png" alt="logo" class="nav-ikon" width="70" height="60" ></a>
-                <div class="logo"></div>
-            </div>
-            <ul>
-                <li>
-                    <a href="#hasiera">Hasiera</a>
-                </li>
-                <li>
-                    <a href="#guriburuz">Lehiaketak</a>
-                </li>
-                <li>
-                    <a href="#lehiaketak">Klaseak</a>
-                </li>
-                <li>
-                    <a href="#lantaldea">Harremana</a>
-                </li>
-                <li>
-                    <a href="#kontaktua">Kategoriak</a>
-                </li>
-                <li>
-                    <a href="#kategoriak">Kokapena</a>
-                </li>
-                <li>
-                    <a href="registro.php">Erregistratu</a>
-                </li>
-                <li>
-                    <a href="saioahasi.html"><img id="saioahasi" src="img/person.svg"></img></a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <header class="headerra">
+        <div class="kontainerra">
+            <nav class="headerren-nav" aria-label="navigation">
+                <div class="logo-content">
+                    <img src="img/karate.png" alt="Logo" class="nav-ikon" width="70" height="60">
+                    <div class="logo">Arte Martzialak</div>
+                </div>
+                <img src="menu-hamburguesa.png" alt="navegazio icon" class="nav-hamburger" width="30" height="30"/>
+                <ul class="menua">
+                    <li> <!-- icono casa como pestaña principal -->
+                        <a href="index.php"><img src="img/casa.png" alt="home" width="30" height="30"></a>
+                    </li>
+                    <li>
+                        <a href="index.php">Guri Buruz</a>
+                    </li>
+                    <li>
+                        <a href="index.php">Kontaktua/Kokapena</a>
+                    </li>
+                    <li>
+                        <a href="erregistroa.php">Erregistroa</a>
+                    </li>
+                    <li>
+                        <a href="saioahasi.php"><img src="img/person.svg"></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="saioahasi">
         <form action="" class="form">
             <h1 class="title">Erregistroa</h1>
