PHP funtzioantzen dute

--- a/public/pribatua.html
+++ b/public/pribatua.html
@@ -121,7 +121,6 @@
                             <th>Pisua</th>
                             <th>Borrokalaria 1</th>
                             <th>Borrokalaria 2</th>
-                            <th>Emaitza</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -130,13 +129,18 @@
                             <td>-88 kg</td>
                             <td>Peio Errasti</td>
                             <td>iker Hernandez</td>
-                            <td>1 - 0</td>
                         </tr>
                         <!-- Puedes agregar más filas según sea necesario -->
                     </tbody>
                 </table>
             </div>
         </div>
+    </section>
+
+    <!-- Pagos -->
+    <section class="section" id="pagos">
+        <div class="container">
+            <h2>Ordainketa</h2>
     </section>
 </body>
 
