--- a/public/pribatua.html
+++ b/public/pribatua.html
@@ -58,15 +58,15 @@
                 </div>
                 <div class="input-group">
                     <label for="direccion">Pasahitza:</label>
-                    <input type="text" id="direccion" name="direccion">
+                    <input type="password" id="direccion" name="direccion">
                 </div>
                 <div class="input-group">
-                    <label for="fecha_nacimiento">Fecha de nacimiento:</label>
-                    <input type="text" id="fecha_nacimiento" name="fecha_nacimiento">
+                    <label for="fecha_nacimiento">Jaiotze data</label>
+                    <input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
                 </div>
                 <div class="input-group">
                     <label for="email">Email:</label>
-                    <input type="text" id="email" name="email">
+                    <input type="email" id="email" name="email">
                 </div>
                 <div class="input-group">
                     <label for="sexo">Sexua:</label>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="input-group">
                     <label for="telefono">Telefonoa:</label>
-                    <input type="text" id="telefono" name="telefono">
+                    <input type="tel" id="telefono" name="telefono">
                 </div>
                 <div class="input-group">
                     <label for="direccion">Helbidea:</label>
@@ -102,8 +102,8 @@
                 </div>
 
                 <div class="btn-group">
-                    <button type="submit">Guardar Cambios</button>
-                    <button type="reset">Cambiar datos</button>
+                    <button type="submit">Datuak Gorde</button>
+                    <button type="submit">Datuak Aldatu</button>
                 </div>
             </form>
         </div>
